# ratch-job

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: docker.yml  release.yml
doc/: open-api.md
doc/conf/: .env.example
docker/: alpine_dockerfile  build_gnu_docker.sh  gnu_dockerfile
docker/docker-compose/ratch-job-cluster/: docker-compose.yaml
docker/docker-compose/ratch-job-simple/: docker-compose.yaml
docs/specs/support_namespace/: tasks.md
proto/: ratch_grpc_service.proto
src/: cli.rs  lib.rs  main.rs  starter.rs  web_config.rs
src/app/: app_index.rs  core.rs  metrics.rs  mod.rs  model.rs
src/cache/: actor_model.rs  core.rs  debug_api.rs  mod.rs
src/common/: app_config.rs  constant.rs  cron_utils.rs  datetime_utils.rs  http_utils.rs  mod.rs  namespace_util.rs  registry_util.rs  share_data.rs
src/common/model/: mod.rs  privilege.rs
src/common/pb/: data_object.proto  data_object.rs  mod.rs
src/console/: mod.rs
src/console/middle/: login_middle.rs
src/console/model/: cluster_model.rs  mod.rs  namespace_model.rs  user_model.rs  webhook_model.rs
src/console/model/app/: mod.rs
src/console/model/job/: mod.rs
src/console/v1/: app_api.rs  cluster_api.rs  job_api.rs  login_api.rs  metrics_api.rs  mod.rs  namespace_api.rs  user_api.rs  webhook_api.rs
src/grpc/: mod.rs  payload_utils.rs  ratch_server_proto.rs  server.rs
src/grpc/handler/: mod.rs  raft_append.rs  raft_route.rs  raft_snapshot.rs  raft_vote.rs
src/job/: core.rs  job_index.rs  metrics.rs  mod.rs
src/job/model/: actor_model.rs  enum_type.rs  job.rs  mod.rs
src/metrics/: collect.rs  core.rs  metrics_key.rs  mod.rs
src/metrics/timeline/: core.rs
src/namespace/: core.rs
src/namespace/model/: actor_model.rs  mod.rs  namespace.rs
src/openapi/: metrics.rs  mod.rs
src/openapi/middle/: mod.rs
src/openapi/v1/: app_api.rs  job_api.rs  mod.rs  raft_api.rs
src/openapi/v1/model/: app_model.rs  job_model.rs  mod.rs
src/openapi/xxljob/: mod.rs  server_api.rs
src/raft/: mod.rs
src/raft/cluster/: mod.rs  model.rs  node_manager.rs  route.rs
src/raft/network/: core.rs  factory.rs  mod.rs
src/raft/store/: core.rs  mod.rs  raftapply.rs  raftdata.rs  raftindex.rs  raftlog.rs
src/schedule/: batch_call.rs  core.rs  job_task.rs  metrics.rs  mod.rs  task_instance.rs
src/schedule/model/: actor_model.rs  finish_mark.rs  mod.rs  task.rs
src/sequence/: code.rs  core.rs  mod.rs  model.rs
src/task/: core.rs  metrics.rs  mod.rs  request_actor.rs  request_client.rs  task_history.rs
src/task/model/: actor_model.rs  app_instance.rs  enum_type.rs  mod.rs  request_model.rs  task.rs  task_request.rs
src/user/: actor_model.rs  core.rs  mod.rs  model.rs  permission.rs
src/webhook/: actor_model.rs  core.rs  mod.rs  model.rs
tools/: test_cluster.sh
(+2 files in other folders)
