[package]
name = "ratchjob"
version = "0.1.6-beta"
edition = "2021"
authors = ["heqingpan <heqingpan@126.com>"]
license = "Apache-2.0"
description = "一个rust实现的分布式任务调度平台服务。计划完全兼容xxl-job协议，然后再增强一些任务调度平台能力。"
repository = "https://github.com/ratch-job/ratch-job"
homepage = "https://github.com/ratch-job/ratch-job"
documentation = "https://docs.rs/ratch-job/latest"
readme = "README.md"
keywords = ["ratch-job","ratchjob","xxl-job","xxljob"]
exclude = [
    ".github/*",
    "cluster_example/*",
    "doc/*",
    "proto/*",
    "tools/*",
    "docker/*",
]


[[bin]]
name = "ratchjob"
path = "src/main.rs"

[features]
default = []
debug=[]

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
serde_urlencoded = "0.7"
actix-web = "4"
actix-http = "3"
actix = "0.13"
actix-rt = "2"
actix-multipart = "0.6"
actix-multipart-derive = "0.6"
log = "0.4"
env_logger = "0.11"
env_logger_timezone_fmt = "0.1.1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
lazy_static = "1.4"
bean_factory = "0.1.4"
reqwest = { version = "0.11", features = ["json"], default-features = false }
async-trait = "0.1"
if-addrs = "0.13.3"
futures-util = "0.3.29"
rand = "0.8.5"
regex = "1.11.1"
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os="windows"))'.dependencies]
fs2 = "0.4.3"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
cron = "0.15.0"
inner-mem-cache = "0.1.7"
ratchjob-web-dist-wrap = "=0.1.5"
mime_guess = { version = "2" }
tonic = "0.12.3"
prost = "0.13.5"
async-raft-ext = "0.6.3"
thiserror = "1.0"
quick-protobuf = "0.8.1"
binrw = "0.13.3"
binrw_derive = "0.13.3"
bytes = "1"
byteorder = "1.4"
sysinfo = "0.30"
bitflags = "2.6"
bcrypt = "0.15"
captcha = "0.0.9"
ratelimiter-rs = "0.1.5"
base64 = "0.21.5"
aes = "0.8"
block-modes = "0.8"
cbc = "0.1.2"
mime = "0.3"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
#用于生成grpc代码，生成后注释掉避免编译额外依赖protoc
tonic-build = "0.12"
